Simplify and shorten some notes

--- a/tex/p041.tex
+++ b/tex/p041.tex
@@ -34,7 +34,7 @@
 \vs p041 4:1 The mass of your sun is slightly greater than the estimate of your physicists, who have reckoned it as about $2\times 10^{30}$\,kg\fnst{\textbf{about $2 \times 10^{30}$\,kg}, The present estimate is: $1.98892 \times 10^{30}$ kg.}. It now exists about halfway between the most dense and the most diffuse stars, having about 1.5 times the density of water\fnst{\textbf{about 1.5 times the density of water}, More accurately: $1.408 \times 10^3$\,kg/m\ts{3}.}. But your sun is neither a liquid nor a solid --- it is gaseous --- and this is true notwithstanding the difficulty of explaining how gaseous matter can attain this and even much greater densities.
 \vs p041 4:2 \pc Gaseous, liquid, and solid states are matters of atomic\hyp{}molecular relationships, but density is a relationship of space and mass. Density varies directly with the quantity of mass in space and inversely with the amount of space in mass, the space between the central cores of matter and the particles which whirl around these centres as well as the space within such material particles.
 \vs p041 4:3 \pc Cooling stars can be physically gaseous and tremendously dense at the same time. You are not familiar with the solar \bibemph{supergases,}\fnst{\textbf{supergases}, In the original human source the phrase ``not imperfect, but superperfect'' explains the prefix ``super''.} but these and other unusual forms of matter explain how even nonsolid suns can attain a density equal to iron --- about the same as Urantia --- and yet be in a highly heated gaseous state and continue to function as suns. The atoms in these dense supergases are exceptionally small; they contain few electrons. Such suns have also largely lost their free ultimatonic stores of energy.
-\vs p041 4:4 One of your near\hyp{}by suns, which started life with about the same mass as yours, has now contracted almost to the size of Urantia, having become 40,000 times as dense as your sun. The weight of this hot\hyp{}cold gaseous\hyp{}solid is about 61 kg/cm\ts{3}\fnst{\textbf{61 kg/cm\ts{3}}, Calculating the density we obtain $\rho = 1851.8$\,kg/cm\ts{3}, which differs greatly from the figure 61\,kg/cm\ts{3} given in the text. Therefore, this ``near-by sun'' has lost most of its mass by now.}. And still this sun shines with a faint reddish glow, the senile glimmer of a dying monarch of light.\fnc{\ldots{}having become \bibtextul{sixty thousand} times as dense as your sun\ldots{} \bibexpl{Textual consistency and current scientific estimates of our sun’s density both support the change to “40,000.” The first paragraph of this section states that our sun is about 1.5 times the density of water 1 g/cm\ts{3}, and 40,000 times this is 40 kg/cm\ts{3}; the current scientific estimate of the sun’s density is 1.4 times the density of water; 40,000 times that is 56 kg/cm\ts{3}. The likely cause of this error in the 1955 text is that the number in question was written as a numeral in the manuscript (40,000 not forty thousand), and the error was caused by a simple keystroke error in which 6 was mis-keyed for 4, creating 60,000 instead of 40,000. When the text was formatted for printing, the numerals were changed to words, and an error that formerly consisted of one digit was transformed into an incorrect word. The formatting of words and numbers for printing is not a revelatory issue; it is a matter of style, and is covered extensively in the \bibemph{Chicago Manual of Style}. (The problem at \bibref[43:1.6]{p043 1:6} in the text appears to have had an identical origin, and \bibref[42:5.1]{p042 5:1} in the text is very closely related.)}}
+\vs p041 4:4 One of your near\hyp{}by suns, which started life with about the same mass as yours, has now contracted almost to the size of Urantia, having become 40,000 times as dense as your sun. The weight of this hot\hyp{}cold gaseous\hyp{}solid is about 61 kg/cm\ts{3}\fnst{\textbf{61 kg/cm\ts{3}}, Calculating the density we obtain $\rho = 1851.8$\,kg/cm\ts{3}, which differs greatly from the figure 61\,kg/cm\ts{3} given in the text. Therefore, this ``near-by sun'' has lost most of its mass by now.}. And still this sun shines with a faint reddish glow, the senile glimmer of a dying monarch of light.\fnc{\ldots{}having become \bibtextul{sixty thousand} times as dense as your sun\ldots{} \bibexpl{Textual consistency and current scientific estimates of our sun’s density both support the change to “40,000.” The first paragraph of this section states that our sun is about 1.5 times the density of water 1 g/cm\ts{3}, and 40,000 times this is 40 kg/cm\ts{3}; the current scientific estimate of the sun’s density is 1.4 times the density of water; 40,000 times that is 56 kg/cm\ts{3}. The likely cause of this error in the 1955 text is that the number in question was written as a numeral in the manuscript (40,000 not forty thousand), and the error was caused by a simple keystroke error in which 6 was mis-keyed for 4, creating 60,000 instead of 40,000. When the text was formatted for printing, the numerals were changed to words, and an error that formerly consisted of one digit was transformed into an incorrect word. The formatting of words and numbers for printing is not a revelatory issue; it is a matter of style, and is covered extensively in the Chicago Manual of Style. (The problem at \bibref[43:1.6]{p043 1:6} in the text appears to have had an identical origin, and \bibref[42:5.1]{p042 5:1} in the text is very closely related.)}}
 \vs p041 4:5 Most of the suns, however, are not so dense. One of your nearer neighbours\fnst{\textbf{One of your nearer neighbours}, The distance to Capella (α Aurig\ae) is estimated to be about 43 light years.} has a density exactly equal to that of your atmosphere at sea level. If you were in the interior of this sun, you would be unable to discern anything. And temperature permitting, you could penetrate the majority of the suns which twinkle in the night sky and notice no more matter than you perceive in the air of your earthly living rooms.
 \vs p041 4:6 The massive sun of Veluntia, one of the largest in Orvonton, has a density only 0.001 that of Urantia’s atmosphere. Were it in composition similar to your atmosphere and not superheated, it would be such a vacuum that human beings would speedily suffocate if they were in or on it.
 \vs p041 4:7 Another of the Orvonton giants now has a surface temperature a trifle under 1,600\,°C. Its diameter is over 482,803,200\,km --- ample room to accommodate your sun and the present orbit of the earth. And yet, for all this enormous size, over 40,000,000 times\fnst{\textbf{40,000,000 times}, Here the ``size'' obviously signifies the volume, not the diameter, because the diameter of the Sun is 1,391,400\,km and therefore the ratio of volumes of the two stars is 41,778,652, i.e. approximately 40,000,000.} that of your sun, its mass is only about 30 times greater. These enormous suns have an extending fringe that reaches almost from one to the other.
