--- a/tex/p043.tex
+++ b/tex/p043.tex
@@ -80,7 +80,7 @@
 \vs p043 7:5 These citizens of the constellation are not actually members of the artisan corps, but they freely work with all groups and contribute much to making the constellation worlds the chief spheres for the realization of the magnificent artistic possibilities of transition culture. They do not function beyond the confines of the constellation headquarters worlds.
 \usection{8.\bibnobreakspace The Edentia Training Worlds}
 \vs p043 8:1 The physical endowment of Edentia and its surrounding spheres is well\hyp{}nigh perfect; they could hardly equal the spiritual grandeur of the spheres of Salvington, but they far surpass the glories of the training worlds of Jerusem. All these Edentia spheres are energized directly by the universal space currents, and their enormous power systems, both material and morontial, are expertly supervised and distributed by the constellation centres, assisted by a competent corps of Master Physical Controllers and Morontia Power Supervisors.
-\vs p043 8:2 The time spent on the 70 training worlds of transition morontia culture associated with the Edentia age of mortal ascension, is the most settled period in an ascending mortal’s career up to the status of a finaliter; this is really the typical morontia life. While you are re\hyp{}keyed each time you pass from one major cultural world to another, you retain the same morontia body, and there are no periods of personality unconsciousness.\fnc{While you are \bibtextul{rekeyed} each time\ldots{} \bibexpl{The only other occurrence of re-keyed is in hyphenated form \bibref[48:2.21]{p048 2:21} in the text. Words formed with the “re-” prefix, fall under the same general \bibemph{Chicago Manual of Style} rule, but this instance is covered by an exception: “a) When the first vowel of the added word would\ldots{}suggest mispronunciation, the hyphen is retained.” In this case, the un-hyphenated form appears to indicate that the first syllable is pronounced with a short e, causing the reader to stumble. Insertion of the hyphen resolves the problem.}}
+\vs p043 8:2 The time spent on the 70 training worlds of transition morontia culture associated with the Edentia age of mortal ascension, is the most settled period in an ascending mortal’s career up to the status of a finaliter; this is really the typical morontia life. While you are re\hyp{}keyed each time you pass from one major cultural world to another, you retain the same morontia body, and there are no periods of personality unconsciousness.\fnc{While you are \bibtextul{rekeyed} each time\ldots{} \bibexpl{The only other occurrence of re-keyed is in hyphenated form \bibref[48:2.21]{p048 2:21} in the text. Words formed with the “re-” prefix, fall under the same general Chicago Manual of Style rule, but this instance is covered by an exception: “a) When the first vowel of the added word would\ldots{}suggest mispronunciation, the hyphen is retained.” In this case, the un-hyphenated form appears to indicate that the first syllable is pronounced with a short e, causing the reader to stumble. Insertion of the hyphen resolves the problem.}}
 \vs p043 8:3 Your sojourn on Edentia and its associated spheres will be chiefly occupied with the mastery of group ethics, the secret of pleasant and profitable interrelationship between the various universe and superuniverse orders of intelligent personalities.
 \vs p043 8:4 On the mansion worlds you completed the unification of the evolving mortal personality; on the system capital you attained Jerusem citizenship and achieved the willingness to submit the self to the disciplines of group activities and co\hyp{}ordinated undertakings; but now on the constellation training worlds you are to achieve the real socialization of your evolving morontia personality. This supernal cultural acquirement consists in learning how to:
 \vs p043 8:5 \ublistelem{1.}\bibnobreakspace Live happily and work effectively with 10 diverse fellow morontians, while 10 such groups are associated in companies of 100 and then federated in corps of 1,000.
