--- a/tex/p089.tex
+++ b/tex/p089.tex
@@ -33,7 +33,7 @@
 \vs p089 4:6 Surrounded by so many sensitive spirits and grasping gods, primitive man was face to face with such a host of creditor deities that it required all the priests, ritual, and sacrifices throughout an entire lifetime to get him out of spiritual debt. The doctrine of original sin, or racial guilt, started every person out in serious debt to the spirit powers.
 \vs p089 4:7 \pc Gifts and bribes are given to men; but when tendered to the gods, they are described as being dedicated, made sacred, or are called sacrifices. Renunciation was the negative form of propitiation; sacrifice became the positive form. The act of propitiation included praise, glorification, flattery, and even entertainment. And it is the remnants of these positive practices of the olden propitiation cult that constitute the modern forms of divine worship. Present\hyp{}day forms of worship are simply the ritualization of these ancient sacrificial techniques of positive propitiation.
 \vs p089 4:8 \pc Animal sacrifice meant much more to primitive man than it could ever mean to modern races. These barbarians regarded the animals as their actual and near kin. As time passed, man became shrewd in his sacrificing, ceasing to offer up his work animals. At first he sacrificed the \bibemph{best} of everything, including his domesticated animals.
-\vs p089 4:9 It was no empty boast that a certain Egyptian ruler made when he stated that he had sacrificed: 113,433 slaves, 493,386 head of cattle, 88 boats, 2,756 golden images, 331,702 jars of honey and oil, 228,380 jars of wine, 680,714 geese, 6,744,428 loaves of bread, 5,740,352 sacks of corn\fnc{5,740,352 sacks of \bibtextul{coin}. \bibexpl{Early Egyptians developed a system of exchange of gold and silver rings, but true coinage was not introduced until the period of Persian domination (525--415 BCE), during which the gold daric and silver siglos of Darius I (reigned from 521--485 BCE) would have been used for some transactions. Coins were not actually minted in Egypt until ~ 404--343 BCE during the brief period of independence between the 1\ts{st} Persian period and the reconquest by Artaxerxes III (342--336 BCE), when silver imitation Athenian Owls were minted. Coins were regularly minted in Egypt during the Ptolemaic (283--30 BCE) and subsequent Roman periods. The Harris Papyrus I (http://en.wikipedia.org/wiki/Papyrus\_Harris\_I) commemorates the reign of Rameses III, and was commissioned by his son Rameses IV at the former’s death in 1172 BCE. The list of gifts to the Gods in the UB at 89:4.9, excerpted from this papyrus, thus predates the earliest significant presence of coins in Egypt by 650--750 years. Therefore, the reference in The Urantia Book is a simple typo made when quoting a known source; but regardless of quantities, the 1955 text cannot be correct --- it is erroneous on its face. This is the key difference between this item and the Greek/Creek item in \bibref[85:4.1]{p085 4:1}. This precise list, including the “coin” typo, is found in William Graham Sumner/Albert G. Keller (http://en.wikipedia.org/wiki/William\_Graham\_Sumner), \bibemph{The Science of Society,} Yale, 1927.}}. And in order to do this he must needs have sorely taxed his toiling subjects.
+\vs p089 4:9 It was no empty boast that a certain Egyptian ruler made when he stated that he had sacrificed: 113,433 slaves, 493,386 head of cattle, 88 boats, 2,756 golden images, 331,702 jars of honey and oil, 228,380 jars of wine, 680,714 geese, 6,744,428 loaves of bread, 5,740,352 sacks of corn\fnc{5,740,352 sacks of \bibtextul{coin}. \bibexpl{Early Egyptians developed a system of exchange of gold and silver rings, but true coinage was not introduced until the period of Persian domination (525--415 BCE), during which the gold daric and silver siglos of Darius I (reigned from 521--485 BCE) would have been used for some transactions. Coins were not actually minted in Egypt until ~ 404--343 BCE during the brief period of independence between the 1\ts{st} Persian period and the reconquest by Artaxerxes III (342--336 BCE), when silver imitation Athenian Owls were minted. Coins were regularly minted in Egypt during the Ptolemaic (283--30 BCE) and subsequent Roman periods. The Harris Papyrus I commemorates the reign of Rameses III, and was commissioned by his son Rameses IV at the former’s death in 1172 BCE. This list of gifts to the Gods is excerpted from this papyrus, thus predates the earliest significant presence of coins in Egypt by 650--750 years. This is the key difference between this item and the Greek/Creek item in \bibref[85:4.1]{p085 4:1}. This precise list, including the “coin” typo, is found in William Graham Sumner/Albert G. Keller, ``The Science of Society,'' Yale, 1927.}}. And in order to do this he must needs have sorely taxed his toiling subjects.
 \vs p089 4:10 Sheer necessity eventually drove these semisavages to eat the material part of their sacrifices, the gods having enjoyed the soul thereof. And this custom found justification under the pretense of the ancient sacred meal, a communion service according to modern usage.
 \usection{5.\bibnobreakspace Sacrifices and Cannibalism}
 \vs p089 5:1 Modern ideas of early cannibalism are entirely wrong; it was a part of the mores of early society. While cannibalism is traditionally horrible to modern civilization, it was a part of the social and religious structure of primitive society. Group interests dictated the practice of cannibalism. It grew up through the urge of necessity and persisted because of the slavery of superstition and ignorance. It was a social, economic, religious, and military custom.
