--- a/tex/p153.tex
+++ b/tex/p153.tex
@@ -10,7 +10,7 @@
 \vs p153 1:4 \pc This crisis in Jesus’ earth life began with the feeding of the 5,000 and ended with this sermon in the synagogue; the crisis in the lives of the apostles began with this sermon in the synagogue and continued for a whole year, ending only with the Master’s trial and crucifixion.
 \vs p153 1:5 \pc As they sat there in the synagogue that afternoon before Jesus began to speak, there was just one great mystery, just one supreme question, in the minds of all. Both his friends and his foes pondered just one thought, and that was: “Why did he himself so deliberately and effectively turn back the tide of popular enthusiasm?” And it was immediately before and immediately after this sermon that the doubts and disappointments of his disgruntled adherents grew into unconscious opposition and eventually turned into actual hatred. It was after this sermon in the synagogue that Judas Iscariot entertained his first conscious thought of deserting. But he did, for the time being, effectively master all such inclinations.
 \vs p153 1:6 Everyone was in a state of perplexity. Jesus had left them dumbfounded and confounded. He had recently engaged in the greatest demonstration of supernatural power to characterize his whole career. The feeding of the 5,000 was the one event of his earth life which made the greatest appeal to the Jewish concept of the expected Messiah. But this extraordinary advantage was immediately and unexplainedly offset by his prompt and unequivocal refusal to be made king.
-\vs p153 1:7 On Friday evening, and again on Sabbath morning, the Jerusalem leaders had laboured long and earnestly with Jairus to prevent Jesus’ speaking in the synagogue, but it was of no avail. Jairus’s only reply to all this pleading was: “I have granted this request, and I will not violate my word.”\fnc{\bibtextul{Jairus’} only reply to all this pleading was\ldots{} \bibexpl{The corrected form is supported by usage elsewhere \bibref[152:1.1]{p0152 1:1} and \bibref[152:1.3]{p0152 1:3}. The \bibemph{Chicago Manual of Style} recommendations have been evolving over time, with the 9\ts{th} - 11\ts{th} editions favouring the original version here, but the (12\ts{th}) and 13\ts{th}, supporting the revision. This evolution is recognized by the other contemporary sources, with Fowler (1926) noting that the form s’ is still retained “in poetic or reverential contexts\ldots{}But elsewhere we now add the s\ldots{}” Strunk (1918) however, in that author’s famously opinionated way, has as its very first rule of usage: “Form the possessive singular of nouns by adding ’s. Follow this rule whatever the final consonant\ldots{} Exceptions are the possessive of ancient proper names in -es and -is and the possessive Jesus’\ldots{}” [author’s emphasis] Usage in the 1955 text follows, with only this exception, the more modern practices supported by Fowler and Strunk. (An important supporting example being Lazarus’s, which would be found without its ’s under the older rules.)}}
+\vs p153 1:7 On Friday evening, and again on Sabbath morning, the Jerusalem leaders had laboured long and earnestly with Jairus to prevent Jesus’ speaking in the synagogue, but it was of no avail. Jairus’s only reply to all this pleading was: “I have granted this request, and I will not violate my word.”\fnc{\bibtextul{Jairus’} only reply to all this pleading was\ldots{} \bibexpl{The corrected form is supported by usage elsewhere \bibref[152:1.1]{p0152 1:1} and \bibref[152:1.3]{p0152 1:3}. The Chicago Manual of Style recommendations have been evolving over time, with the 9\ts{th} - 11\ts{th} editions favouring the original version here, but the (12\ts{th}) and 13\ts{th}, supporting the revision. This evolution is recognized by the other contemporary sources, with Fowler (1926) noting that the form s’ is still retained “in poetic or reverential contexts\ldots{}But elsewhere we now add the s\ldots{}” Strunk (1918) however, in that author’s famously opinionated way, has as its very first rule of usage: “Form the possessive singular of nouns by adding ’s. Follow this rule whatever the final consonant\ldots{} Exceptions are the possessive of ancient proper names in -es and -is and the possessive Jesus’\ldots{}” [author’s emphasis] Usage in the 1955 text follows, with only this exception, the more modern practices supported by Fowler and Strunk. (An important supporting example being Lazarus’s, which would be found without its ’s under the older rules.)}}
 \usection{2.\bibnobreakspace The Epochal Sermon}
 \vs p153 2:1 Jesus introduced this sermon by reading from the Law as found in Deuteronomy: \textcolour{ubdarkred}{“But it shall come to pass, if this people will not hearken to the voice of God, that the curses of transgression shall surely overtake them. The Lord shall cause you to be smitten by your enemies; you shall be removed into all the kingdoms of the earth. And the Lord shall bring you and the king you have set up over you into the hands of a strange nation. You shall become an astonishment, a proverb, and a byword among all nations. Your sons and your daughters shall go into captivity. The strangers among you shall rise high in authority while you are brought very low. And these things shall be upon you and your seed forever because you would not hearken to the word of the Lord. Therefore shall you serve your enemies who shall come against you. You shall endure hunger and thirst and wear this alien yoke of iron. The Lord shall bring against you a nation from afar, from the end of the earth, a nation whose tongue you shall not understand, a nation of fierce countenance, a nation which will have little regard for you. And they shall besiege you in all your towns until the high fortified walls wherein you have trusted come down; and all the land shall fall into their hands. And it shall come to pass that you will be driven to eat the fruit of your own bodies, the flesh of your sons and daughters, during this time of siege, because of the straitness wherewith your enemies shall press you.”}
 \vs p153 2:2 And when Jesus had finished this reading, he turned to the Prophets and read from Jeremiah: \textcolour{ubdarkred}{“‘If you will not hearken to the words of my servants the prophets whom I have sent you, then will I make this house like Shiloh, and I will make this city a curse to all the nations of the earth.’ And the priests and the teachers heard Jeremiah speak these words in the house of the Lord. And it came to pass that, when Jeremiah had made an end of speaking all that the Lord had commanded him to speak to all the people, the priests and teachers laid hold of him, saying, ‘You shall surely die.’ And all the people crowded around Jeremiah in the house of the Lord. And when the princes of Judah heard these things, they sat in judgment on Jeremiah. Then spoke the priests and the teachers to the princes and to all the people, saying: ‘This man is worthy to die, for he has prophesied against our city, and you have heard him with your own ears.’ Then spoke Jeremiah to all the princes and to all the people: ‘The Lord sent me to prophesy against this house and against this city all the words which you have heard. Now, therefore, amend your ways and reform your doings and obey the voice of the Lord your God that you may escape the evil which has been pronounced against you. As for me, behold I am in your hands. Do with me as seems good and right in your eyes. But know you for certain that, if you put me to death, you shall bring innocent blood upon yourselves and upon this people, for of a truth the Lord has sent me to speak all these words in your ears.’}
