--- a/tex/p166.tex
+++ b/tex/p166.tex
@@ -27,7 +27,7 @@
 \vs p166 3:1 As Jesus and the 12 visited with the messengers of the kingdom at Gerasa, one of the Pharisees who believed in him asked this question: “Lord, will there be few or many really saved?” And Jesus, answering, said:
 \vs p166 3:2 \pc \textcolour{ubdarkred}{“You have been taught that only the children of Abraham will be saved; that only the gentiles of adoption can hope for salvation. Some of you have reasoned that, since the Scriptures record that only Caleb and Joshua from among all the hosts that went out of Egypt lived to enter the promised land, only a comparatively few of those who seek the kingdom of heaven shall find entrance thereto.}
 \vs p166 3:3 \textcolour{ubdarkred}{“You also have another saying among you, and one that contains much truth: That the way which leads to eternal life is straight and narrow, that the door which leads thereto is likewise narrow so that, of those who seek salvation, few can find entrance through this door. You also have a teaching that the way which leads to destruction is broad, that the entrance thereto is wide, and that there are many who choose to go this way. And this proverb is not without its meaning. But I declare that salvation is first a matter of your personal choosing. Even if the door to the way of life is narrow, it is wide enough to admit all who sincerely seek to enter, for I am that door. And the Son will never refuse entrance to any child of the universe who, by faith, seeks to find the Father through the Son.}
-\vs p166 3:4 “But herein is the danger to all who would postpone their entrance into the kingdom while they continue to pursue the pleasures of immaturity and indulge the satisfactions of selfishness: Having refused to enter the kingdom as a spiritual experience, they may subsequently seek entrance thereto when the glory of the better way becomes revealed in the age to come. And when, therefore, those who spurned the kingdom when I came in the likeness of humanity seek to find an entrance when it is revealed in the likeness of divinity, then will I say to all such selfish ones: I know not whence you are. You had your chance to prepare for this heavenly citizenship, but you refused all such proffers of mercy; you rejected all invitations to come while the door was open. Now, to you who have refused salvation, the door is shut. This door is not open to those who would enter the kingdom for selfish glory. Salvation is not for those who are unwilling to pay the price of wholehearted dedication to doing my Father’s will. When in spirit and soul you have turned your backs upon the Father’s kingdom, it is useless in mind and body to stand before this door and knock, saying, ‘Lord, open to us; we would also be great in the kingdom.’ Then will I declare that you are not of my fold. I will not receive you to be among those who have fought the good fight of faith and won the reward of unselfish service in the kingdom on earth. And when you say, ‘Did we not eat and drink with you, and did you not teach in our streets?’ then shall I again declare that you are spiritual strangers; that we were not fellow servants in the Father’s ministry of mercy on earth; that I do not know you; and then shall the Judge of all the earth say to you: ‘Depart from us, all you who have taken delight in the works of iniquity.’\fnc{\bibtextul{Lord} open to us; we would also be great in the kingdom. \bibexpl{In the original format, Lord was the last word in the line, making a dropped comma not unlikely. It is possible that the comma was simply viewed as unnecessary within such a short phrase, and it should also be noted that while the use of the comma in direct address is now regarded as standard, the \bibemph{Chicago Manual of Style} was silent on the matter until its 12\ts{th} edition (1969). The committee decided to adopt the modern format and insert the comma.}}
+\vs p166 3:4 “But herein is the danger to all who would postpone their entrance into the kingdom while they continue to pursue the pleasures of immaturity and indulge the satisfactions of selfishness: Having refused to enter the kingdom as a spiritual experience, they may subsequently seek entrance thereto when the glory of the better way becomes revealed in the age to come. And when, therefore, those who spurned the kingdom when I came in the likeness of humanity seek to find an entrance when it is revealed in the likeness of divinity, then will I say to all such selfish ones: I know not whence you are. You had your chance to prepare for this heavenly citizenship, but you refused all such proffers of mercy; you rejected all invitations to come while the door was open. Now, to you who have refused salvation, the door is shut. This door is not open to those who would enter the kingdom for selfish glory. Salvation is not for those who are unwilling to pay the price of wholehearted dedication to doing my Father’s will. When in spirit and soul you have turned your backs upon the Father’s kingdom, it is useless in mind and body to stand before this door and knock, saying, ‘Lord, open to us; we would also be great in the kingdom.’ Then will I declare that you are not of my fold. I will not receive you to be among those who have fought the good fight of faith and won the reward of unselfish service in the kingdom on earth. And when you say, ‘Did we not eat and drink with you, and did you not teach in our streets?’ then shall I again declare that you are spiritual strangers; that we were not fellow servants in the Father’s ministry of mercy on earth; that I do not know you; and then shall the Judge of all the earth say to you: ‘Depart from us, all you who have taken delight in the works of iniquity.’\fnc{\bibtextul{Lord} open to us; we would also be great in the kingdom. \bibexpl{In the original format, Lord was the last word in the line, making a dropped comma not unlikely. It is possible that the comma was simply viewed as unnecessary within such a short phrase, and it should also be noted that while the use of the comma in direct address is now regarded as standard, the Chicago Manual of Style was silent on the matter until its 12\ts{th} edition (1969). The committee decided to adopt the modern format and insert the comma.}}
 \vs p166 3:5 \textcolour{ubdarkred}{“But fear not; every one who sincerely desires to find eternal life by entrance into the kingdom of God shall certainly find such everlasting salvation. But you who refuse this salvation will some day see the prophets of the seed of Abraham sit down with the believers of the gentile nations in this glorified kingdom to partake of the bread of life and to refresh themselves with the water thereof. And they who shall thus take the kingdom in spiritual power and by the persistent assaults of living faith will come from the north and the south and from the east and the west. And, behold, many who are first will be last, and those who are last will many times be first.”}
 \vs p166 3:6 This was indeed a new and strange version of the old and familiar proverb of the straight and narrow way.
 \vs p166 3:7 Slowly the apostles and many of the disciples were learning the meaning of Jesus’ early declaration: \textcolour{ubdarkred}{“Unless you are born again, born of the spirit, you cannot enter the kingdom of God.”} Nevertheless, to all who are honest of heart and sincere in faith, it remains eternally true: \textcolour{ubdarkred}{“Behold, I stand at the doors of men’s hearts and knock, and if any man will open to me, I will come in and sup with him and will feed him with the bread of life; we shall be one in spirit and purpose, and so shall we ever be brethren in the long and fruitful service of the search for the Paradise Father.”} And so, whether few or many are to be saved altogether depends on whether few or many will heed the invitation: \textcolour{ubdarkred}{“I am the door, I am the new and living way, and whosoever wills may enter to embark upon the endless truth\hyp{}search for eternal life.”}
