Re-arrange the footnote at 142:2.2

--- a/tex/p142.tex
+++ b/tex/p142.tex
@@ -12,7 +12,7 @@
 \vs p142 1:7 Besides teaching in and about the temple, the apostles and other believers were engaged in doing much personal work among the Passover throngs. These interested men and women carried the news of Jesus’ message from this Passover celebration to the uttermost parts of the Roman Empire and also to the East. This was the beginning of the spread of the gospel of the kingdom to the outside world. No longer was the work of Jesus to be confined to Palestine.
 \usection{2.\bibnobreakspace God’s Wrath}
 \vs p142 2:1 There was in Jerusalem in attendance upon the Passover festivities one Jacob, a wealthy Jewish trader from Crete, and he came to Andrew making request to see Jesus privately. Andrew arranged this secret meeting with Jesus at Flavius’s home the evening of the next day. This man could not comprehend the Master’s teachings, and he came because he desired to inquire more fully about the kingdom of God. Said Jacob to Jesus: “But, Rabbi, Moses and the olden prophets tell us that Yahweh is a jealous God, a God of great wrath and fierce anger. The prophets say he hates evildoers and takes vengeance on those who obey not his law. You and your disciples teach us that God is a kind and compassionate Father who so loves all men that he would welcome them into this new kingdom of heaven, which you proclaim is so near at hand.”
-\vs p142 2:2 \pc When Jacob finished speaking, Jesus replied: \textcolour{ubdarkred}{“Jacob, you have well stated the teachings of the olden prophets who taught the children of their generation in accordance with the light of their day. Our Father in Paradise is changeless. But the concept of his nature has enlarged and grown from the days of Moses down through the times of Amos and even to the generation of the prophet Isaiah. And now have I come in the flesh to reveal the Father in new glory and to show forth his love and mercy to all men on all worlds. As the gospel of this kingdom shall spread over the world with its message of good cheer and good will to all men, there will grow up improved and better relations among the families of all nations. As time passes, fathers and their children will love each other more\fnst{\bibemph{See Malachi 4:6} ``And he shall turn the heart of the fathers to the children, and the heart of the children to their fathers, lest I come and smite the earth with a curse.''}, and thus will be brought about a better understanding of the love of the Father in heaven for his children on earth. Remember, Jacob, that a good and true father not only loves his family as a whole --- as a family --- but he also truly loves and affectionately cares for each \bibemph{individual} member.”}
+\vs p142 2:2 \pc When Jacob finished speaking, Jesus replied: \textcolour{ubdarkred}{“Jacob, you have well stated the teachings of the olden prophets who taught the children of their generation in accordance with the light of their day. Our Father in Paradise is changeless. But the concept of his nature has enlarged and grown from the days of Moses down through the times of Amos and even to the generation of the prophet Isaiah. And now have I come in the flesh to reveal the Father in new glory and to show forth his love and mercy to all men on all worlds. As the gospel of this kingdom shall spread over the world with its message of good cheer and good will to all men, there will grow up improved and better relations among the families of all nations. As time passes, fathers and their children will love each other more, and thus will be brought about a better understanding of the love of the Father in heaven for his children on earth. Remember, Jacob, that a good and true father not only loves his family as a whole --- as a family --- but he also truly loves and affectionately cares for each \bibemph{individual} member.”}\fnst{See Malachi 4:6: ``And he shall turn the heart of the fathers to the children, and the heart of the children to their fathers, lest I come and smite the earth with a curse.''}
 \vs p142 2:3 After considerable discussion of the heavenly Father’s character, Jesus paused to say: \textcolour{ubdarkred}{“You, Jacob, being a father of many, know well the truth of my words.”} And Jacob said: “But, Master, who told you I was the father of six children? How did you know this about me?” And the Master replied: \textcolour{ubdarkred}{“Suffice it to say that the Father and the Son know all things, for indeed they see all. Loving your children as a father on earth, you must now accept as a reality the love of the heavenly Father for \bibemph{you ---} not just for all the children of Abraham, but for you, your individual soul.”}
 \vs p142 2:4 \pc Then Jesus went on to say: \textcolour{ubdarkred}{“When your children are very young and immature, and when you must chastise them, they may reflect that their father is angry and filled with resentful wrath. Their immaturity cannot penetrate beyond the punishment to discern the father’s farseeing and corrective affection. But when these same children become grown\hyp{}up men and women, would it not be folly for them to cling to these earlier and misconceived notions regarding their father? As men and women they should now discern their father’s love in all these early disciplines. And should not mankind, as the centuries pass, come the better to understand the true nature and loving character of the Father in heaven? What profit have you from successive generations of spiritual illumination if you persist in viewing God as Moses and the prophets saw him? I say to you, Jacob, under the bright light of this hour you should see the Father as none of those who have gone before ever beheld him. And thus seeing him, you should rejoice to enter the kingdom wherein such a merciful Father rules, and you should seek to have his will of love dominate your life henceforth.”}
 \vs p142 2:5 And Jacob answered: “Rabbi, I believe; I desire that you lead me into the Father’s kingdom.”
