Correct an error in the text of 91:4.3 Here we have British billions (10^12), not American (10^9) The American text says:
"Your own solar center radiates almost one hundred billion tons of actual matter annually, ..."

This is a quote from page 98 of Eddington's "Stars and Atoms", which says:

"... the heat emitted by the sun each year has a mass of 120 billion tons;..."

This corresponds to the figure obtained by a modern calculation, see e.g. here:
http://www.slate.com/blogs/bad_astronomy/2014/07/14/solar_wind_versus_fusion_how_does_the_sun_lose_mass.html

However, in the Preface to "Stars and Atoms" Eddington clearly says:

"The English billion, trillion, &c. (10^12, 10^18, &c.) are used."

So, the English billion is "million million". But throughout the Urantia Papers the word "billion" is used many times
(91 times in 74 paragraphs) and it is always in the American sense, i.e. as 10^9 (thousand million).

Therefore, all translations (e.g. both Russian UF and NYC) which translate it as corresponding to the American billion are
in error and ought to be corrected.

--- a/tex/p041.tex
+++ b/tex/p041.tex
@@ -79,7 +79,7 @@
 \usection{9.\bibnobreakspace Sun Stability}
 \vs p041 9:1 The larger suns maintain such a gravity control over their electrons that light escapes only with the aid of the powerful X\hyp{}rays. These helper rays penetrate all space and are concerned in the maintenance of the basic ultimatonic associations of energy. The great energy losses in the early days of a sun, subsequent to its attainment of maximum temperature --- upwards of 19,500,000\,°C --- are not so much due to light escape as to ultimatonic leakage. These ultimaton energies escape out into space, to engage in the adventure of electronic association and energy materialization, as a veritable energy blast during adolescent solar times.
 \vs p041 9:2 \pc Atoms and electrons are subject to gravity. The ultimatons are \bibemph{not} subject to local gravity, the interplay of material attraction, but they are fully obedient to absolute or Paradise gravity, to the trend, the swing, of the universal and eternal circle of the universe of universes. Ultimatonic energy does not obey the linear or direct gravity attraction of near\hyp{}by or remote material masses, but it does ever swing true to the circuit of the great ellipse of the far\hyp{}flung creation.
-\vs p041 9:3 \pc Your own solar centre radiates almost $10^{11}$ tons of actual matter annually, while the giant suns lose matter at a prodigious rate during their earlier growth, the first billion years. A sun’s life becomes stable after the maximum of internal temperature is reached, and the subatomic energies begin to be released. And it is just at this critical point that the larger suns are given to convulsive pulsations.
+\vs p041 9:3 \pc Your own solar centre radiates almost $10^{14}$\fnst{$\mathbf{10^{14}}$, The American text says ``one hundred billion'', but this is a quotation from p.98 of A.S.~Eddington's ``Stars and Atoms'', where the \bibemph{English} billions (million million) are used and not the \bibemph{American} billions, i.e. thousand million. Otherwise, the figure given in the text would be thousand times smaller than the actual value well-known in the modern science.} tons of actual matter annually, while the giant suns lose matter at a prodigious rate during their earlier growth, the first billion years. A sun’s life becomes stable after the maximum of internal temperature is reached, and the subatomic energies begin to be released. And it is just at this critical point that the larger suns are given to convulsive pulsations.
 \vs p041 9:4 Sun stability is wholly dependent on the equilibrium between gravity\hyp{}heat contention --- tremendous pressures counterbalanced by unimagined temperatures. The interior gas elasticity of the suns upholds the overlying layers of varied materials, and when gravity and heat are in equilibrium, the weight of the outer materials exactly equals the temperature pressure of the underlying and interior gases. In many of the younger stars continued gravity condensation produces ever\hyp{}heightening internal temperatures, and as internal heat increases, the interior X\hyp{}ray pressure of supergas winds becomes so great that, in connection with the centrifugal motion, a sun begins to throw its exterior layers off into space, thus redressing the imbalance between gravity and heat.
 \vs p041 9:5 Your own sun has long since attained relative equilibrium between its expansion and contraction cycles, those disturbances which produce the gigantic pulsations of many of the younger stars. Your sun is now passing out of its six billionth year. At the present time it is functioning through the period of greatest economy. It will shine on as of present efficiency for more than $2.5 \times 10^{10}$ years. It will probably experience a partially efficient period of decline as long as the combined periods of its youth and stabilized function.
 \usection{10.\bibnobreakspace Origin of Inhabited Worlds}
